// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should import, transform and transfer varda data 1`] = `
Array [
  Object {
    "etunimet": "Christian",
    "henkilo": "localhost/henkilo/21",
    "henkilo_id": "21",
    "henkilo_oid": "1.1.1.1",
    "id": "11",
    "kutsumanimi": "Christian",
    "paos_kytkin": false,
    "paos_organisaatio_oid": null,
    "sukunimi": "Child",
    "syntyma_pvm": 2019-06-01T00:00:00.000Z,
    "vakatoimija_oid": "2.2.2.1",
  },
  Object {
    "etunimet": "Camilla",
    "henkilo": "localhost/henkilo/22",
    "henkilo_id": "22",
    "henkilo_oid": "1.1.1.2",
    "id": "12",
    "kutsumanimi": "Camilla",
    "paos_kytkin": true,
    "paos_organisaatio_oid": "2.2.2.2",
    "sukunimi": "Child",
    "syntyma_pvm": 2018-11-25T00:00:00.000Z,
    "vakatoimija_oid": null,
  },
  Object {
    "etunimet": "",
    "henkilo": "localhost/henkilo/23",
    "henkilo_id": "23",
    "henkilo_oid": "1.1.1.3",
    "id": "13",
    "kutsumanimi": "",
    "paos_kytkin": false,
    "paos_organisaatio_oid": null,
    "sukunimi": "",
    "syntyma_pvm": 2001-11-18T00:00:00.000Z,
    "vakatoimija_oid": "2.2.2.1",
  },
]
`;

exports[`should import, transform and transfer varda data 2`] = `
Array [
  Object {
    "evaka_person_id": Any<String>,
    "organizer_oid": "2.2.2.1",
    "varda_child_id": "11",
    "varda_person_id": "21",
    "varda_person_oid": "1.1.1.1",
  },
  Object {
    "evaka_person_id": Any<String>,
    "organizer_oid": "2.2.2.2",
    "varda_child_id": "12",
    "varda_person_id": "22",
    "varda_person_oid": "1.1.1.2",
  },
  Object {
    "evaka_person_id": Any<String>,
    "organizer_oid": "2.2.2.1",
    "varda_child_id": "13",
    "varda_person_id": "23",
    "varda_person_oid": "1.1.1.3",
  },
]
`;

exports[`should import, transform and transfer varda data 3`] = `
Array [
  Object {
    "created_at": Any<Date>,
    "evaka_person_id": Any<String>,
    "modified_at": Any<Date>,
    "organizer_oid": "2.2.2.1",
    "uploaded_at": null,
    "varda_child_id": "11",
    "varda_person_id": "21",
    "varda_person_oid": "1.1.1.1",
  },
  Object {
    "created_at": Any<Date>,
    "evaka_person_id": Any<String>,
    "modified_at": Any<Date>,
    "organizer_oid": "2.2.2.2",
    "uploaded_at": null,
    "varda_child_id": "12",
    "varda_person_id": "22",
    "varda_person_oid": "1.1.1.2",
  },
  Object {
    "created_at": Any<Date>,
    "evaka_person_id": Any<String>,
    "modified_at": Any<Date>,
    "organizer_oid": "2.2.2.1",
    "uploaded_at": null,
    "varda_child_id": "13",
    "varda_person_id": "23",
    "varda_person_oid": "1.1.1.3",
  },
]
`;
